Add userprofile service working with kafka

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -13,3 +13,7 @@ jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
 
 jwt.access-token-expiration=3600000
 jwt.refresh-token-expiration=604800000
+
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
