--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.cloud.gateway.server.webflux.routes[0].id=auth-route
 spring.cloud.gateway.server.webflux.routes[0].uri=http://auth-service:8080
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/auth/**
 
+spring.cloud.gateway.server.webflux.routes[1].id=profile-service-route
+spring.cloud.gateway.server.webflux.routes[1].uri=http://userprofile-service:8080
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/profiles/**
+
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
 jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
