--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -10,6 +10,14 @@ spring.cloud.gateway.server.webflux.routes[1].id=profile-service-route
 spring.cloud.gateway.server.webflux.routes[1].uri=http://userprofile-service:8080
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/profiles/**
 
+spring.cloud.gateway.server.webflux.routes[2].id=game-service-api-route
+spring.cloud.gateway.server.webflux.routes[2].uri=http://game-service:8080
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/api/game/**
+
+spring.cloud.gateway.server.webflux.routes[3].id=game-service-ws-route
+spring.cloud.gateway.server.webflux.routes[3].uri=ws://game-service:8080
+spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/ws/**
+
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
 jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
