Add matchmaking service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,3 +141,22 @@ services:
       SPRING_DATASOURCE_USERNAME: ranked4user
       SPRING_DATASOURCE_PASSWORD: ranked4password
       KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+
+  matchmaking-service:
+      build:
+        context: ./matchmaking-service
+        dockerfile: Dockerfile
+      container_name: matchmaking_service
+      ports:
+        - "8084:8080"
+      depends_on:
+        - redis
+        - kafka
+        - userprofile-service
+      networks:
+        - app-network
+      environment:
+        SPRING_PROFILES_ACTIVE: docker
+        SPRING_DATA_REDIS_HOST: redis
+        KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+        USER_PROFILE_SERVICE_URL: http://userprofile-service:8080
