--- a/game-service/src/main/resources/application.properties
+++ b/game-service/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.jpa.show-sql=true
 
 spring.kafka.bootstrap-servers=kafka:29092
 
+spring.kafka.producer.bootstrap-servers=kafka:29092
+spring.kafka.admin.properties.bootstrap.servers=kafka:29092
+
 spring.kafka.consumer.group-id=game-service-group
 spring.kafka.consumer.auto-offset-reset=earliest
 
