--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -18,6 +18,10 @@ spring.cloud.gateway.server.webflux.routes[3].id=game-service-ws-route
 spring.cloud.gateway.server.webflux.routes[3].uri=ws://game-service:8080
 spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/ws/**
 
+spring.cloud.gateway.server.webflux.routes[4].id=matchmaking-service-route
+spring.cloud.gateway.server.webflux.routes[4].uri=http://matchmaking-service:8080
+spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/matchmaking/**
+
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
 jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
