--- a/game-service/src/main/resources/application.properties
+++ b/game-service/src/main/resources/application.properties
@@ -9,9 +9,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.kafka.bootstrap-servers=kafka:29092
-
-spring.kafka.producer.bootstrap-servers=kafka:29092
 spring.kafka.admin.properties.bootstrap.servers=kafka:29092
 
 spring.kafka.consumer.group-id=game-service-group
@@ -23,3 +20,6 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.producer.bootstrap-servers=kafka:29092
+spring.kafka.producer.properties.spring.json.add.type.headers=false
