--- a/userprofile-service/src/main/resources/application.properties
+++ b/userprofile-service/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.jpa.show-sql=true
 spring.kafka.bootstrap-servers=kafka:29092
 spring.kafka.consumer.group-id=profile-service-group
 
+spring.kafka.admin.properties.bootstrap.servers=kafka:29092
+
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
