--- a/matchmaking-service/src/main/resources/application.properties
+++ b/matchmaking-service/src/main/resources/application.properties
@@ -9,6 +9,13 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
+spring.kafka.consumer.bootstrap-servers=kafka:29092
+spring.kafka.consumer.group-id=matchmaking-service-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
 spring.kafka.admin.properties.bootstrap.servers=kafka:29092
 
 user.profile.service.url=http://user-profile-service:8082
