--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.cloud.gateway.server.webflux.routes[4].id=matchmaking-service-route
 spring.cloud.gateway.server.webflux.routes[4].uri=http://matchmaking-service:8080
 spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/matchmaking/**
 
+spring.cloud.gateway.server.webflux.routes[5].id=private-matchmaking-route
+spring.cloud.gateway.server.webflux.routes[5].uri=http://matchmaking-service:8080
+spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/api/private-matches/**
+
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
 jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
