--- a/ranked4-frontend/Dockerfile
+++ b/ranked4-frontend/Dockerfile
@@ -11,6 +11,10 @@ FROM nginx:stable-alpine
 
 COPY --from=build /app/dist/ranked4-frontend/browser /usr/share/nginx/html
 
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx.conf /etc/nginx/conf.d/
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
