--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -26,6 +26,10 @@ spring.cloud.gateway.server.webflux.routes[5].id=private-matchmaking-route
 spring.cloud.gateway.server.webflux.routes[5].uri=http://matchmaking-service:8080
 spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/api/private-matches/**
 
+spring.cloud.gateway.server.webflux.routes[6].id=game-service-gif-route
+spring.cloud.gateway.server.webflux.routes[6].uri=http://game-service:8080
+spring.cloud.gateway.server.webflux.routes[6].predicates[0]=Path=/api/gifs/**
+
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
 jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
