Shop service buy a product

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -30,6 +30,10 @@ spring.cloud.gateway.server.webflux.routes[6].id=game-service-gif-route
 spring.cloud.gateway.server.webflux.routes[6].uri=http://game-service:8080
 spring.cloud.gateway.server.webflux.routes[6].predicates[0]=Path=/api/gifs/**
 
+spring.cloud.gateway.server.webflux.routes[7].id=shop-service-route
+spring.cloud.gateway.server.webflux.routes[7].uri=http://shop-service:8080
+spring.cloud.gateway.server.webflux.routes[7].predicates[0]=Path=/api/shop/**
+
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
 jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
