--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -6,33 +6,37 @@ spring.cloud.gateway.server.webflux.routes[0].id=auth-route
 spring.cloud.gateway.server.webflux.routes[0].uri=http://auth-service:8080
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/auth/**
 
-spring.cloud.gateway.server.webflux.routes[1].id=profile-service-route
+spring.cloud.gateway.server.webflux.routes[1].id=profiles-route
 spring.cloud.gateway.server.webflux.routes[1].uri=http://userprofile-service:8080
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/profiles/**
 
-spring.cloud.gateway.server.webflux.routes[2].id=game-service-api-route
-spring.cloud.gateway.server.webflux.routes[2].uri=http://game-service:8080
-spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/api/game/**
+spring.cloud.gateway.server.webflux.routes[2].id=discs-route
+spring.cloud.gateway.server.webflux.routes[2].uri=http://userprofile-service:8080
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/api/discs/**
 
-spring.cloud.gateway.server.webflux.routes[3].id=game-service-ws-route
-spring.cloud.gateway.server.webflux.routes[3].uri=ws://game-service:8080
-spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/ws/**
+spring.cloud.gateway.server.webflux.routes[3].id=game-route
+spring.cloud.gateway.server.webflux.routes[3].uri=http://game-service:8080
+spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/api/game/**
 
-spring.cloud.gateway.server.webflux.routes[4].id=matchmaking-service-route
-spring.cloud.gateway.server.webflux.routes[4].uri=http://matchmaking-service:8080
-spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/matchmaking/**
+spring.cloud.gateway.server.webflux.routes[4].id=gifs-route
+spring.cloud.gateway.server.webflux.routes[4].uri=http://game-service:8080
+spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/gifs/**
 
-spring.cloud.gateway.server.webflux.routes[5].id=private-matchmaking-route
-spring.cloud.gateway.server.webflux.routes[5].uri=http://matchmaking-service:8080
-spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/api/private-matches/**
+spring.cloud.gateway.server.webflux.routes[5].id=websocket-route
+spring.cloud.gateway.server.webflux.routes[5].uri=ws://game-service:8080
+spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/ws/**
 
-spring.cloud.gateway.server.webflux.routes[6].id=game-service-gif-route
-spring.cloud.gateway.server.webflux.routes[6].uri=http://game-service:8080
-spring.cloud.gateway.server.webflux.routes[6].predicates[0]=Path=/api/gifs/**
+spring.cloud.gateway.server.webflux.routes[6].id=matchmaking-route
+spring.cloud.gateway.server.webflux.routes[6].uri=http://matchmaking-service:8080
+spring.cloud.gateway.server.webflux.routes[6].predicates[0]=Path=/api/matchmaking/**
 
-spring.cloud.gateway.server.webflux.routes[7].id=shop-service-route
-spring.cloud.gateway.server.webflux.routes[7].uri=http://shop-service:8080
-spring.cloud.gateway.server.webflux.routes[7].predicates[0]=Path=/api/shop/**
+spring.cloud.gateway.server.webflux.routes[7].id=private-matches-route
+spring.cloud.gateway.server.webflux.routes[7].uri=http://matchmaking-service:8080
+spring.cloud.gateway.server.webflux.routes[7].predicates[0]=Path=/api/private-matches/**
+
+spring.cloud.gateway.server.webflux.routes[8].id=shop-route
+spring.cloud.gateway.server.webflux.routes[8].uri=http://shop-service:8080
+spring.cloud.gateway.server.webflux.routes[8].predicates[0]=Path=/api/shop/**
 
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
