--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -38,6 +38,10 @@ spring.cloud.gateway.server.webflux.routes[8].id=shop-route
 spring.cloud.gateway.server.webflux.routes[8].uri=http://shop-service:8080
 spring.cloud.gateway.server.webflux.routes[8].predicates[0]=Path=/api/shop/**
 
+spring.cloud.gateway.server.webflux.routes[9].id=ai-route
+spring.cloud.gateway.server.webflux.routes[9].uri=http://ai-service:8080
+spring.cloud.gateway.server.webflux.routes[9].predicates[0]=Path=/api/ai/**
+
 spring.cloud.gateway.server.webflux.default-filters[0]=RemoveRequestHeader=Cookie
 
 jwt.secret=41c9fe91828610b45d999df193f6aeccc6c752d2
