--- a/game-service/src/main/resources/application.properties
+++ b/game-service/src/main/resources/application.properties
@@ -7,7 +7,12 @@ spring.datasource.password=ranked4password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+logging.level.org.springframework.web.socket=WARN
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
 spring.kafka.admin.properties.bootstrap.servers=kafka:29092
 
